Refactored the tests for StudyYamlV1Migrator to use Optionals correctly